Bug 390494 - performance tests fail during "transform" using new JRE